--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,17 @@ code {
   width: 100%;
   max-width: 1200px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
+.productListItem {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  margin: 10px;
+  padding: 5px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  width: 30%
+}
 
