--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,19 +14,24 @@ code {
 
 .container {
   width: 100%;
-  max-width: 1200px;
+}
+
+.productList{
   padding: 10px;
+  border: 1px solid lightgray;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex: 1;
+  justify-content: center;
+  margin: 0 auto;
+  margin: 10px;
 }
 
 .productListItem {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   margin: 10px;
   padding: 5px;
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
-  width: 30%
 }
 
