--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,23 @@ code {
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
 
+.pageHeader {
+  text-align: center;
+}
+
+.nav {
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  width: 50%;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.nav a {
+  text-decoration: none;
+  font-size: 2em; 
+  color: black;
+}
+
