--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 10px;
+  /* margin: 10px; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -17,22 +17,25 @@ code {
 }
 
 .productList{
-  padding: 10px;
+  width: 80%;
+  /* padding: 10px; */
   border: 1px solid lightgray;
   display: flex;
-  flex-direction: row;
-  flex: 1;
   justify-content: center;
+
+  flex-direction: row;
   margin: 0 auto;
-  margin: 10px;
+  /* flex-wrap: wrap; */
 }
 
 .productListItem {
   display: flex;
   flex-direction: column;
-  margin: 10px;
-  padding: 5px;
+  padding: 15px;
   box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  /* width: 50%; */
+  margin: 10px;
+  word-wrap: break-word;
 }
 
 .pageHeader {
@@ -53,5 +56,19 @@ code {
   text-decoration: none;
   font-size: 2em; 
   color: black;
+}
+
+.buttonNav {
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid lightgray;
+  background: lightgray;
+  transition: 1s all ease;
+} 
+
+.buttonNav:hover {
+  border: 1px solid black;
+  background: white;
 }
 
